--- a/_posts/2024-10-28-4、语言类工具.md
+++ b/_posts/2024-10-28-4、语言类工具.md
@@ -7,6 +7,8 @@ title: "4、语言类工具"
 
 ## &emsp; 4.1、检查英语语法 <br> 
 &emsp; 该[网站](https://textgears.com/zh/check-grammar-online)可以检查英语语法。
+<br> <img src='/images/skills/Useful Tools/4、语言类/4.1、语法检测.png' width="500" style="display: block; margin: 0 auto;"> <br>
 
 ## &emsp; 4.2、英语作文免费批改（每天有次数限制） <br> 
 &emsp; 该[网站](https://www.essay.art/toefl)可以在线批改托福雅思等作文。
+<br> <img src='/images/skills/Useful Tools/4、语言类/4.2、作文评分.png' width="500" style="display: block; margin: 0 auto;"> <br>
