--- a/_posts/2024-10-27-5、赛博图书馆.md
+++ b/_posts/2024-10-27-5、赛博图书馆.md
@@ -3,27 +3,27 @@ layout: post
 title: "5、赛博图书馆"
 ---
 
-# 5、赛博图书馆
+## 5、赛博图书馆
 
-## &emsp; 5.1、数据分析学习网站 <br> 
+#### &emsp; 5.1、数据分析学习网站 <br> 
 &emsp; 该[网站](https://zh-cn.statisticseasily.com/)可以用来学习数据分析知识。
 
-## &emsp; 5.2、机器学习实战 <br> 
+#### &emsp; 5.2、机器学习实战 <br> 
 &emsp; 该[网站](https://www.bookstack.cn/read/apachecn-MachineLearning/README.md)是《机器学习实战》的网页版。
 
-## &emsp; 5.3、机器学习周志华等许多书 <br> 
+#### &emsp; 5.3、机器学习周志华等许多书 <br> 
 &emsp; [这个github仓库](https://github.com/Mikoto10032/DeepLearning/blob/master/books/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%91%A8%E5%BF%97%E5%8D%8E.pdf
 )包含了很多机器学习及相关的书，非常丰富。
 
-## &emsp; 5.4、机器学习南瓜书 <br> 
+#### &emsp; 5.4、机器学习南瓜书 <br> 
 &emsp; [这个github仓库](https://github.com/datawhalechina/pumpkin-book)是机器学习南瓜书的github仓库。
 
-## &emsp; 5.5、机器学习笔记 <br> 
+#### &emsp; 5.5、机器学习笔记 <br> 
 &emsp; [这个github仓库](https://github.com/imhuay/Algorithm_Interview_Notes-Chinese-backups)包含了机器学习、深度学习、NLP、计算机视觉等方面的笔记。
 <img src='/images/blogs/skills/Useful Tools/5.5、机器学习相关书籍.jpg' width="300" style="display: block; margin: 0 auto;">
 
-## &emsp; 5.6、SCI-HUB <br> 
+#### &emsp; 5.6、SCI-HUB <br> 
 &emsp; 这个[网站](https://sci-hub.se/)是SCI-HUB，可以免费下载文章。
 
-## &emsp; 5.7、中国古典名著 <br> 
+#### &emsp; 5.7、中国古典名著 <br> 
 &emsp; 这个[网站](https://zhuanlan.zhihu.com/p/609049687)里可以下载不少中国古代名著。
