--- a/_posts/2024-10-28-4、语言类工具.md
+++ b/_posts/2024-10-28-4、语言类工具.md
@@ -3,17 +3,17 @@ layout: post
 title: "4、语言类工具"
 ---
 
-# 4、语言类妙妙工具
+## 4、语言类妙妙工具
 
-## &emsp; 4.1、检查英语语法 <br> 
+#### &emsp; 4.1、检查英语语法 <br> 
 &emsp; 该[网站](https://textgears.com/zh/check-grammar-online)可以检查英语语法。
 <br> <img src='/images/skills/Useful Tools/4、语言类/4.1、语法检测.png' width="500" style="display: block; margin: 0 auto;"> <br>
 
-## &emsp; 4.2、英语作文免费批改（每天有次数限制） <br> 
+#### &emsp; 4.2、英语作文免费批改（每天有次数限制） <br> 
 &emsp; 该[网站](https://www.essay.art/toefl)可以在线批改托福雅思等作文。
 <br> <img src='/images/skills/Useful Tools/4、语言类/4.2、作文评分.png' width="1000" style="display: block; margin: 0 auto;"> <br>
 
-## &emsp; 4.3、托福学习经验 <br> 
+#### &emsp; 4.3、托福学习经验 <br> 
 &emsp; 如何备考TOFEL可以参考[这篇文章](https://forum.chasedream.com/thread-1286514-1-1.html)。
 <br> <img src='/images/skills/Useful Tools/4、语言类/4.3、自学TOFEL.png' width="500" style="display: block; margin: 0 auto;"> <br>
 
@@ -23,7 +23,7 @@ title: "4、语言类工具"
 &emsp; TOFEL口语及写作的模板可以参考[这篇blog](https://stone-jeep-097.notion.site/TOEFL-aeb54f1799564b4e911dfd30da176e56)。这篇blog详细介绍了TOFEL口语四种题型的答题方式、语料以及答题模板。
 <br> <img src='/images/skills/Useful Tools/4、语言类/4.3、TOFEL口语作文模板.png' width="800" style="display: block; margin: 0 auto;"> <br>
 
-## &emsp; 4.4、西班牙语发音入门 <br> 
+#### &emsp; 4.4、西班牙语发音入门 <br> 
 &emsp; 西班牙语发音快速入门可以参考[这篇文章](https://www.bilibili.com/video/BV1Ue411N7j9/?spm_id_from=333.337.search-card.all.click&vd_source=d5bf9778119412295721f01394ea745e)，非常简洁，而且时间短，如果想学习西语歌曲的话这个应该足够了。
 <br> <img src='/images/skills/Useful Tools/4、语言类/4.4、西班牙语发音入门.png' width="1000" style="display: block; margin: 0 auto;"> <br>
 
