--- a/_posts/2024-10-26-6、开发者狂喜.md
+++ b/_posts/2024-10-26-6、开发者狂喜.md
@@ -3,8 +3,16 @@ layout: post
 title: "6、开发者狂喜"
 ---
 
-# 6、开发者狂喜
+## 6、开发者狂喜
 
-## &emsp; 6.1、免费字体 <br> 
+#### &emsp; 6.1、免费字体 <br> 
 &emsp; 该[网站](https://www.100font.com/)可以下载种类非常多的免费字体。
 <img src='/images/blogs/skills/Useful Tools/6.1、免费字体.jpg' width="800" style="display: block; margin: 0 auto;">
+
+#### &emsp; 6.2、免费游戏素材 <br> 
+&emsp; 该[Github仓库](https://github.com/Kavex/GameDev-Resources#multiple-graphic-collections)提供了很多游戏素材。
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.2、免费游戏素材-1.png' width="800" style="display: block; margin: 0 auto;"> <br>
+
+&emsp; 该[Github仓库](https://github.com/notpresident35/awesome-learn-gamedev)提供了很多游戏素材。
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.2、免费游戏素材-2.png' width="800" style="display: block; margin: 0 auto;">
+
