--- a/_posts/2024-10-25-7、科研小妙招.md
+++ b/_posts/2024-10-25-7、科研小妙招.md
@@ -11,3 +11,7 @@ title: "7、科研小妙招"
 
 &emsp; [SCI-Hub](https://sci-hub.se/)输入文章名字、DOI号即可下载，伟大无需多言。
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.1、文献下载-SCI-Hub.png' width="800" style="display: block; margin: 0 auto;">
+
+#### &emsp; 7.2、科研绘图 <br> 
+&emsp; [drwa.io](drwa.io)是一款免费的在线绘制流程图的网站。
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.2、科研绘图-draw.io.png' width="800" style="display: block; margin: 0 auto;"> <br>
