--- a/_posts/2024-11-01-0、无用但有趣.md
+++ b/_posts/2024-11-01-0、无用但有趣.md
@@ -3,31 +3,43 @@ layout: post
 title: "0、无用但有趣"
 ---
 
-## X、无用但有趣的妙妙工具
+## 0、无用但有趣的妙妙工具
 
-#### &emsp; X.1、高精度IP查询 <br> 
+#### &emsp; 0.1、高精度IP查询 <br> 
 &emsp; 该[网站](https://chaipip.com/)可以高精度IP查询。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.01、IP查询.png' width="800" style="display: block; margin: 0 auto;">
 
-#### &emsp; X.2、检测反应速度等生理指标 <br> 
+#### &emsp; 0.2、检测反应速度等生理指标 <br> 
 &emsp; 该[网站](https://humanbenchmark.com/)可以查看反应速度、测记忆力等，更多的是检测一些生理指标。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.02、反应力测试.png' width="800" style="display: block; margin: 0 auto;">
 
-#### &emsp; X.3、低配在线U3D <br> 
+#### &emsp; 0.3、低配在线U3D <br> 
 &emsp; 该[网站](https://3d.sumo.app/?lang=zh)有点像非常非常低配版本的在线U3D，特点在于不用本地。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.03、低配U3D.png' width="800" style="display: block; margin: 0 auto;">
 
-#### &emsp; X.4、手机电脑无缝同步剪贴板 <br> 
+#### &emsp; 0.4、手机电脑无缝同步剪贴板 <br> 
 &emsp; [这里](https://zhuanlan.zhihu.com/p/401445173?utm_id=0)记录了几种手机电脑同步剪切板的工具（没啥用）。
 
-#### &emsp; X.5、Google Play Apk 提取 <br> 
+#### &emsp; 0.5、Google Play Apk 提取 <br> 
 &emsp; 该[网站](https://guozh.net/google-play-apk-download/)介绍了三种提取Google Play Apk的方法。
 
-#### &emsp; X.6、表情包制作网站 <br> 
+#### &emsp; 0.6、表情包制作网站 <br> 
 &emsp; 该[网站](https://www.zuomeme.com/)可以用上面的模板制作表情包。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.06、表情包制作.png' width="800" style="display: block; margin: 0 auto;">
 
-#### &emsp; X.7、英雄联盟相关资源获取 <br> 
+#### &emsp; 0.7、英雄联盟相关资源获取 <br> 
 &emsp; 该[网站](https://buguoguo.cn/)是B站up主布锅锅做的一个可以查找英雄联盟相关信息的一些东西。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.07、布锅锅联盟网站.png' width="800" style="display: block; margin: 0 auto;">
 
-#### &emsp; X.8、在线弹钢琴 <br> 
-&emsp; 该[网站](https://www.autopiano.cn/zh-TW/post/1425)可以在线弹钢琴，如鸟之诗、素颜等。
+#### &emsp; 0.8、在线弹钢琴 <br> 
+&emsp; 该[网站](https://www.autopiano.cn/zh-TW/post/1425)可以在线弹钢琴，如鸟之诗、素颜、虫儿飞等，点开网站就可以直接按键弹奏。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.08、在线弹钢琴.png' width="800" style="display: block; margin: 0 auto;">
 
-#### &emsp; X.9、假文生成器 <br> 
+#### &emsp; 0.9、假文生成器 <br> 
 &emsp; 该[网站](https://www.lddgo.net/string/lorem-ipsum)可以用来生成一些假文。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.09、假文生成器.png' width="800" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.10、寻找鼠标 <br> 
+&emsp; 该[网站](https://pointerpointer.com/)通过一些图片来指向鼠标。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.10、寻找鼠标.png' width="800" style="display: block; margin: 0 auto;">
+
