--- a/_posts/2024-11-01-0、无用但有趣.md
+++ b/_posts/2024-11-01-0、无用但有趣.md
@@ -7,7 +7,7 @@ title: "0、无用但有趣"
 
 #### &emsp; 0.1、高精度IP查询 <br> 
 &emsp; 该[网站](https://chaipip.com/)可以高精度IP查询。
-<img src='/images/skills/Useful Tools/0、无用但有趣/0.01、IP查询.png' width="800" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.01、IP查询.png' width="400" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.2、检测反应速度等生理指标 <br> 
 &emsp; 该[网站](https://humanbenchmark.com/)可以查看反应速度、测记忆力等，更多的是检测一些生理指标。
@@ -33,13 +33,13 @@ title: "0、无用但有趣"
 
 #### &emsp; 0.8、在线弹钢琴 <br> 
 &emsp; 该[网站](https://www.autopiano.cn/zh-TW/post/1425)可以在线弹钢琴，如鸟之诗、素颜、虫儿飞等，点开网站就可以直接按键弹奏。
-<img src='/images/skills/Useful Tools/0、无用但有趣/0.08、在线弹钢琴.png' width="800" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.08、在线弹钢琴.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.9、假文生成器 <br> 
 &emsp; 该[网站](https://www.lddgo.net/string/lorem-ipsum)可以用来生成一些假文。
-<img src='/images/skills/Useful Tools/0、无用但有趣/0.09、假文生成器.png' width="800" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.09、假文生成器.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.10、寻找鼠标 <br> 
-&emsp; 该[网站](https://pointerpointer.com/)通过一些图片来指向鼠标。
-<img src='/images/skills/Useful Tools/0、无用但有趣/0.10、寻找鼠标.png' width="800" style="display: block; margin: 0 auto;">
+&emsp; 该[网站](https://pointerpointer.com/)通过一些图片来指向鼠标，如：
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.10、寻找鼠标.png' width="500" style="display: block; margin: 0 auto;">
 
