--- a/_posts/2024-10-25-7、科研小妙招.md
+++ b/_posts/2024-10-25-7、科研小妙招.md
@@ -15,3 +15,8 @@ title: "7、科研小妙招"
 #### &emsp; 7.2、科研绘图 <br> 
 &emsp; [drwa.io](drwa.io)是一款免费的在线绘制流程图的网站。
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.2、科研绘图-draw.io.png' width="800" style="display: block; margin: 0 auto;"> <br>
+
+#### &emsp; 7.3、科研文献可视化 <br> 
+&emsp; [Citespace](https://citespace.podia.com/)是一款好用的科研文献可视化工具，[知网文献整理](https://blog.csdn.net/hu397313168/article/details/142958776)参考教程，[基于WOS](https://blog.csdn.net/weixin_46915208/article/details/124076014)的教程，由于WOS更新后可能会报时间切片(Time Slicing)的错误，解决方法请看[这里](https://blog.csdn.net/m0_61791601/article/details/128576193)。
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.3、科研文献可视化.png' width="800" style="display: block; margin: 0 auto;"> <br>
+
