--- a/_posts/2024-11-01-0、无用但有趣.md
+++ b/_posts/2024-11-01-0、无用但有趣.md
@@ -43,3 +43,39 @@ title: "0、无用但有趣"
 &emsp; 该[网站](https://pointerpointer.com/)通过一些图片来指向鼠标，如：
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.10、寻找鼠标.png' width="500" style="display: block; margin: 0 auto;">
 
+#### &emsp; 0.11、没用的网站（推荐） <br> 
+&emsp; 该[网站](theuselessweb.com)会随机出来一些有趣的网站，点击即可进入。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.11、没用的网站.png' width="500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.12、舔狗日记 <br> 
+&emsp; 该[网站](jlwz.cn/dog)会随机出现各种各样的舔狗语录。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.12、舔狗日记.png' width="500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.13、Windows 93（有趣） <br> 
+&emsp; 该[网站](windows93.net)提供了一个网页版的Windows93，并且提供了一些小游戏和大量现代网络文化和幽默元素。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.13、Windows93.png' width="500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.14、家常菜谱大全（实用） <br> 
+&emsp; 该[网站](cook.yunyoujun.cn)可以选择几种食材+厨具，然后生成一些可以组合出来的菜谱，点进去即跳转到B站视频教程。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.14、组合菜谱.png' width="500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.15、在线捏猫（及其他网站） <br> 
+&emsp; 该[网站](niemao.top)可以在线捏猫，**此外在网站下方还提供了许多其他有意思的东西**。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.15、在线捏猫.png' width="500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.16、emoji合成器（好玩） <br> 
+&emsp; 该[网站](emoji6.com/emojimix)可以制定或随机合成emoji。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.16、emoji合成器.png' width="500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.17、神奇海螺试验场（有趣） <br> 
+&emsp; 该[网站](https://lab.magiconch.com/)和本网站有点类似，收集了很多好玩的网站，这位大佬的[Github](https://github.com/itorr)。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.17、神奇海螺试验场.png' width="500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.18、赛博做旧，电子包浆 <br> 
+&emsp; 该[网站](https://magiconch.com/patina/)可以将图片做旧。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.18、赛博做旧.png' width="500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.19、缩写解释 <br> 
+&emsp; 将首字母缩写输入该[网站](https://lab.magiconch.com/nbnhhsh/)，即可得到可能的全称。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.19、缩写解释.png' width="500" style="display: block; margin: 0 auto;">
+
