--- a/_posts/2024-10-26-6、开发者狂喜.md
+++ b/_posts/2024-10-26-6、开发者狂喜.md
@@ -16,3 +16,15 @@ title: "6、开发者狂喜"
 &emsp; 该[Github仓库](https://github.com/notpresident35/awesome-learn-gamedev)提供了很多游戏素材。
 <img src='/images/skills/Useful Tools/6、开发者狂喜/6.2、免费游戏素材-2.png' width="500" style="display: block; margin: 0 auto;">
 
+#### &emsp; 6.3、查看字体商用 <br> 
+&emsp; 该[网站](https://www.qiuziti.com/)可以查看字体是否可以商用。
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.3、查看字体版权.png' width="500" style="display: block; margin: 0 auto;"> <br>
+
+&emsp; 该[网站](https://fonts.safe.360.cn/)同样可以查看字体是否可以商用。
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.3、查看字体版权2.png' width="500" style="display: block; margin: 0 auto;"> <br>
+
+#### &emsp; 6.4、可商用字体 <br> 
+&emsp; 该[网站](https://www.xiusheji.com/special/fonts-free.html)可以下载可商用字体。
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.4、可商用字体.png' width="500" style="display: block; margin: 0 auto;"> <br>
+
+
