--- a/_posts/2024-10-27-5、赛博图书馆.md
+++ b/_posts/2024-10-27-5、赛博图书馆.md
@@ -7,27 +7,27 @@ title: "5、赛博图书馆"
 
 #### &emsp; 5.1、数据分析学习网站 <br> 
 &emsp; 该[网站](https://zh-cn.statisticseasily.com/)可以用来学习数据分析知识。
-<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.1、数据分析网站.png' width="1500" style="display: block; margin: 0 auto;"> <br>
+<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.1、数据分析网站.png' width="1500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 5.2、机器学习实战 <br> 
 &emsp; 该[网站](https://www.bookstack.cn/read/apachecn-MachineLearning/README.md)是《机器学习实战》的网页版。
-<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.2、机器学习实战-网页版.png' width="1500" style="display: block; margin: 0 auto;"> <br>
+<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.2、机器学习实战-网页版.png' width="1500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 5.3、机器学习完整学习流程（强推） <br> 
 &emsp; [这个github仓库](https://github.com/Mikoto10032/DeepLearning)包含了很多机器学习及相关的书以及NLP、深度强化学习、神经网络模型等很多机器学习的资料，非常丰富。
-<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.3、机器学习学习流程1.png' width="1500" style="display: block; margin: 0 auto;"> <br>
-<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.3、机器学习学习流程2.png' width="1500" style="display: block; margin: 0 auto;"> <br>
+<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.3、机器学习学习流程1.png' width="1500" style="display: block; margin: 0 auto;">
+<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.3、机器学习学习流程2.png' width="1500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 5.4、机器学习南瓜书 <br>
 &emsp; [这个github仓库](https://github.com/datawhalechina/pumpkin-book)是机器学习南瓜书的github仓库。
 
 #### &emsp; 5.5、机器学习笔记 <br> 
 &emsp; [这个github仓库](https://github.com/imhuay/Algorithm_Interview_Notes-Chinese-backups)包含了机器学习、深度学习、NLP、计算机视觉等方面的笔记。
-<img src='/images/blogs/skills/Useful Tools/5.5、机器学习相关书籍.jpg' width="300" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/5、赛博图书馆/5.5、机器学习相关书籍.jpg' width="300" style="display: block; margin: 0 auto;">
 
 #### &emsp; 5.6、书栈网 <br> 
 &emsp; [书栈网](https://www.bookstack.cn/cate)一个各种电子书的网站版本，可以免费看很多工具书。
-<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.6、书栈网.png' width="1500" style="display: block; margin: 0 auto;"> <br>
+<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.6、书栈网.png' width="1500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 5.7、SCI-HUB <br> 
 &emsp; 这个[网站](https://sci-hub.se/)是SCI-HUB，可以免费下载文章。
