--- a/_posts/2024-10-25-7、科研小妙招.md
+++ b/_posts/2024-10-25-7、科研小妙招.md
@@ -20,3 +20,10 @@ title: "7、科研小妙招"
 &emsp; [Citespace](https://citespace.podia.com/)是一款好用的科研文献可视化工具，[知网文献整理](https://blog.csdn.net/hu397313168/article/details/142958776)参考教程，[基于WOS](https://blog.csdn.net/weixin_46915208/article/details/124076014)的教程，由于WOS更新后可能会报时间切片(Time Slicing)的错误，解决方法请看[这里](https://blog.csdn.net/m0_61791601/article/details/128576193)。
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.3、科研文献可视化.png' width="800" style="display: block; margin: 0 auto;"> <br>
 
+#### &emsp; 7.4、GPT Academic <br> 
+&emsp; [这个github仓库](https://github.com/binary-husky/gpt_academic)是GPT Academic。为GPT/GLM等LLM大语言模型提供实用化交互接口，特别优化论文阅读/润色/写作体验，模块化设计，支持自定义快捷按钮&函数插件，支持Python和C++等项目剖析&自译解功能，PDF/LaTex论文翻译&总结功能，支持并行问询多种LLM模型，支持chatglm3等本地模型。接入通义千问, deepseekcoder, 讯飞星火, 文心一言, llama2, rwkv, claude2, moss等。
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.4、学术润色模型.png' width="800" style="display: block; margin: 0 auto;"> <br>
+
+#### &emsp; 7.5、知竹甘特图 <br> 
+&emsp; [知竹甘特图](https://zz-plan.com)可以在线制作甘特图，就是有点慢。
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.5、知竹甘特图.png' width="800" style="display: block; margin: 0 auto;"> <br>
