--- a/_posts/2024-11-01-0、无用但有趣.md
+++ b/_posts/2024-11-01-0、无用但有趣.md
@@ -79,3 +79,6 @@ title: "0、无用但有趣"
 &emsp; 将首字母缩写输入该[网站](https://lab.magiconch.com/nbnhhsh/)，即可得到可能的全称。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.19、缩写解释.png' width="500" style="display: block; margin: 0 auto;">
 
+#### &emsp; 0.20、在线可玩小游戏（无需flash） <br> 
+&emsp; 该[网站](https://oldswf.com/)可以在线直接玩[Q版泡泡堂](https://oldswf.com/game/7120)等小游戏。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.20、在线可玩小游戏.png' width="500" style="display: block; margin: 0 auto;">
