--- a/_posts/2024-10-24-8、妙妙工具网站.md
+++ b/_posts/2024-10-24-8、妙妙工具网站.md
@@ -5,22 +5,23 @@ title: "8、妙妙工具网站"
 
 ## 8、妙妙工具网站
 
-#### &emsp; 8.1、听我说.我爱你 <br> 
+#### &emsp; 8.1、合集网站 <br> 
 &emsp; [听我说.我爱你](听我说.我爱你)或者[https://heeee.com/](https://heeee.com/)都可以进入该网站，该网站是一个很多影视资源、AI工具、小说网站之类的小合集。
 <img src='/images/skills/Useful Tools/8、妙妙工具网站/8.1、听我说.我爱你.png' width="1500" style="display: block; margin: 0 auto;"> <br>
 
-#### &emsp; 8.2、神奇海螺试验场（有趣） <br> 
-&emsp; 该[网站](https://lab.magiconch.com/)收集了很多好玩的网站，这位大佬的[Github](https://github.com/itorr)。
+&emsp; [神奇海螺试验场](https://lab.magiconch.com/)收集了很多好玩的网站，这位大佬的[Github](https://github.com/itorr)。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.17、神奇海螺试验场.png' width="1500" style="display: block; margin: 0 auto;">
 
-#### &emsp; 8.3、前端哥工具箱 <br> 
-&emsp; 该[网站](https://tool.qianduange.cn/)是个非常非常全的工具箱，包括图片处理、视频处理、B站弹幕查询、QQ工具等。
-<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.3、前端哥工具箱.png' width="1500" style="display: block; margin: 0 auto;">
+&emsp; [前端哥工具箱](https://tool.qianduange.cn/)是个非常非常全的工具箱，包括图片处理、视频处理、B站弹幕查询、QQ工具等。
+<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.1、前端哥工具箱.png' width="1500" style="display: block; margin: 0 auto;">
 
-## &emsp; 8.4、在线工具箱 <br> 
 &emsp; [在线工具箱](https://www.xdtool.com/)是一个类似X.4的在线工具箱，设计多功能计算器（房贷计算器、子网掩码计算器、时间换算器等）、加解谜编码、手机软件、手机游戏等。
-<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.4、在线工具箱.png' width="1500" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.1、在线工具箱.png' width="1500" style="display: block; margin: 0 auto;">
 
-## &emsp; 8.5、大圣盘-网盘资源搜索 <br> 
+## &emsp; 8.2、大圣盘-网盘资源搜索 <br> 
 &emsp; 该[网站](https://www.dashengpan.com/#/main/search?restype=1)可以通过关键词搜索指定网盘的一些资源。
-<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.5、大圣盘-网盘资源搜索.png' width="1500" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.2、大圣盘-网盘资源搜索.png' width="1500" style="display: block; margin: 0 auto;">
+
+## &emsp; 8.3、免登录传输文件 <br> 
+&emsp; 该[网站](https://www.wenshushu.cn/)可以通过关键词搜索指定网盘的一些资源。
+<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.3、免登录传输.png' width="1500" style="display: block; margin: 0 auto;">
