--- a/_posts/2024-10-25-7、科研小妙招.md
+++ b/_posts/2024-10-25-7、科研小妙招.md
@@ -27,3 +27,13 @@ title: "7、科研小妙招"
 #### &emsp; 7.5、知竹甘特图 <br> 
 &emsp; [知竹甘特图](https://zz-plan.com)可以在线制作甘特图，就是有点慢。
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.5、知竹甘特图.png' width="800" style="display: block; margin: 0 auto;"> <br>
+
+#### &emsp; 7.6、科研绘图配色 <br> 
+&emsp; [这篇文章](https://zhuanlan.zhihu.com/p/670396774)的科研绘图配色挺多的，有EGB和16进制的，一共35套配色以及配套的matlab代码。
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色1.png' width="800" style="display: block; margin: 0 auto;"> <br>
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色2.png' width="800" style="display: block; margin: 0 auto;"> <br>
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色3.png' width="800" style="display: block; margin: 0 auto;"> <br>
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色4.png' width="800" style="display: block; margin: 0 auto;"> <br>
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色5.png' width="800" style="display: block; margin: 0 auto;"> <br>
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色6.png' width="800" style="display: block; margin: 0 auto;"> <br>
+
