--- a/_posts/2024-10-28-4、语言类工具.md
+++ b/_posts/2024-10-28-4、语言类工具.md
@@ -5,6 +5,14 @@ title: "4、语言类工具"
 
 ## 4、语言类妙妙工具
 
+这部分提供了一些学习外语的方法和经验，包括语言类考试的经验。
+
+## Quick Jump
+- [4.1、检查英语语法](https://textgears.com/zh/check-grammar-online)
+- [4.2、英语作文批改](https://www.essay.art/toefl)
+- [4.3、托福学习经验](#托福学习经验)
+- [4.4、西班牙语发音入门](https://www.bilibili.com/video/BV1Ue411N7j9/?spm_id_from=333.337.search-card.all.click&vd_source=d5bf9778119412295721f01394ea745e)
+
 #### &emsp; 4.1、检查英语语法
 &emsp; 该[网站](https://textgears.com/zh/check-grammar-online)可以检查英语语法。
 <br> <img src='/images/skills/Useful Tools/4、语言类/4.1、语法检测.png' width="500" style="display: block; margin: 0 auto;"> <br>
@@ -13,7 +21,7 @@ title: "4、语言类工具"
 &emsp; 该[网站](https://www.essay.art/toefl)可以在线批改托福雅思等作文。
 <br> <img src='/images/skills/Useful Tools/4、语言类/4.2、作文评分.png' width="1000" style="display: block; margin: 0 auto;"> <br>
 
-#### &emsp; 4.3、托福学习经验
+#### &emsp; 4.3、[托福学习经验](#托福学习经验)
 &emsp; 如何备考TOFEL可以参考[这篇文章](https://forum.chasedream.com/thread-1286514-1-1.html)。
 <br> <img src='/images/skills/Useful Tools/4、语言类/4.3、自学TOFEL.png' width="500" style="display: block; margin: 0 auto;"> <br>
 
