--- a/_posts/2024-10-31-1、批量修改.md
+++ b/_posts/2024-10-31-1、批量修改.md
@@ -6,6 +6,11 @@ tags: [tools, moonwalk]
 ---
 
 ## 1、批量修改图片大小和名字
+
+## Quick Jump
+- [1.1、批量重命名](http://huaaorain.github.io/files/1、批量修改/批量修改文件名_4.01.exe)
+- [1.2、批量修改大小](http://huaaorain.github.io/files/1、批量修改/批量更改图大小.exe)
+
 #### &emsp; 1.1、批量重命名： <br>
 &emsp; 该[软件](http://huaaorain.github.io/files/1、批量修改/批量修改文件名_4.01.exe) 可以批量对文件进行重命名，包括添加、删除、替换等功能，下面是操作界面及简述：
 <br> <img src='/images/skills/Useful Tools/1、批量修改/1.1、批量重命名文件.jpg' width="1000" style="display: block; margin: 0 auto;"> <br>
