--- a/_posts/2024-11-01-0、无用但有趣.md
+++ b/_posts/2024-11-01-0、无用但有趣.md
@@ -5,6 +5,30 @@ title: "0、无用但有趣"
 
 ## 0、无用但有趣的妙妙工具
 
+这里收录了一些很有趣（或有用？）的妙妙网站。
+
+## Quick Jump
+- [0.1、高精度IP查询](https://chaipip.com/)
+- [0.2、检测反应速度等生理指标](https://humanbenchmark.com/)
+- [0.3、低配在线U3D](https://3d.sumo.app/?lang=zh)
+- [0.4、手机电脑无缝同步剪贴板](https://zhuanlan.zhihu.com/p/401445173?utm_id=0)
+- [0.5、Google Play Apk 提取](https://guozh.net/google-play-apk-download/)
+- [0.6、表情包制作网站](https://www.zuomeme.com/)
+- [0.7、英雄联盟相关资源获取](https://buguoguo.cn/)
+- [0.8、在线弹钢琴](https://www.autopiano.cn/zh-TW/post/1425)
+- [0.9、假文生成器](https://www.lddgo.net/string/lorem-ipsum)
+- [0.10、寻找鼠标](https://pointerpointer.com/)
+- [0.11、没用的网站（推荐）](theuselessweb.com)
+- [0.12、舔狗日记](jlwz.cn/dog)
+- [0.13、Windows 93（有趣）](windows93.net)
+- [0.14、家常菜谱大全（实用）](cook.yunyoujun.cn)
+- [0.15、在线捏猫](niemao.top)
+- [0.16、emoji合成器（好玩）](emoji6.com/emojimix)
+- [0.17、神奇海螺试验场（有趣）](https://lab.magiconch.com/)
+- [0.18、赛博做旧，电子包浆](https://magiconch.com/patina/)
+- [0.19、缩写解释](https://lab.magiconch.com/nbnhhsh/)
+- [0.20、在线可玩小游戏](https://oldswf.com/)
+
 #### &emsp; 0.1、高精度IP查询 <br> 
 &emsp; 该[网站](https://chaipip.com/)可以高精度IP查询。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.01、IP查询.png' width="400" style="display: block; margin: 0 auto;">
