--- a/_posts/2024-10-24-8、妙妙工具网站.md
+++ b/_posts/2024-10-24-8、妙妙工具网站.md
@@ -15,8 +15,14 @@ title: "8、妙妙工具网站"
 &emsp; [前端哥工具箱](https://tool.qianduange.cn/)是个非常非常全的工具箱，包括图片处理、视频处理、B站弹幕查询、QQ工具等。
 <img src='/images/skills/Useful Tools/8、妙妙工具网站/8.1、前端哥工具箱.png' width="1500" style="display: block; margin: 0 auto;">
 
-&emsp; [在线工具箱](https://www.xdtool.com/)是一个类似X.4的在线工具箱，设计多功能计算器（房贷计算器、子网掩码计算器、时间换算器等）、加解谜编码、手机软件、手机游戏等。
+&emsp; [在线工具箱](https://www.xdtool.com/)是一个在线工具箱，设计多功能计算器（房贷计算器、子网掩码计算器、时间换算器等）、加解谜编码、手机软件、手机游戏等。
 <img src='/images/skills/Useful Tools/8、妙妙工具网站/8.1、在线工具箱.png' width="1500" style="display: block; margin: 0 auto;">
+
+&emsp; [图片编辑器](https://photokit.com/?lang=zh#)是一个在线图片处理工具箱，包含渐变色生成、图像增强等。
+<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.1、图片编辑器.png' width="1500" style="display: block; margin: 0 auto;">
+
+&emsp; [niemao.top](niemao.top)可以在线捏猫，**此外在网站下方还提供了许多其他有意思的东西**。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.15、在线捏猫.png' width="1500" style="display: block; margin: 0 auto;">
 
 ## &emsp; 8.2、大圣盘-网盘资源搜索 <br> 
 &emsp; 该[网站](https://www.dashengpan.com/#/main/search?restype=1)可以通过关键词搜索指定网盘的一些资源。
@@ -25,3 +31,9 @@ title: "8、妙妙工具网站"
 ## &emsp; 8.3、免登录传输文件 <br> 
 &emsp; 该[网站](https://www.wenshushu.cn/)可以通过关键词搜索指定网盘的一些资源。
 <img src='/images/skills/Useful Tools/8、妙妙工具网站/8.3、免登录传输.png' width="1500" style="display: block; margin: 0 auto;">
+
+## &emsp; 8.4、歌曲下载 <br> 
+&emsp; [歌曲宝](https://www.gequbao.com/)可以免费下载一些VIP音乐。
+<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.4、歌曲下载.png' width="1500" style="display: block; margin: 0 auto;">
+
+
