--- a/_posts/2024-10-29-3、键盘锁.md
+++ b/_posts/2024-10-29-3、键盘锁.md
@@ -5,25 +5,32 @@ title: "3、键盘锁"
 
 ## 3、键盘锁
 
-下面的5个软件都是从[这个帖子](https://www.52pojie.cn/thread-1176577-1-1.html)上下载的。
+键盘锁，即给键盘上锁。下面的5个软件都是从[这个帖子](https://www.52pojie.cn/thread-1176577-1-1.html)上下载的。
+
+## Quick Jump
+- [3.1、KeyFreeze](http://hua-ao-yu.github.io/files/KeyFreeze（键盘鼠标锁）.exe)
+- [3.2、键盘锁定工具](http://hua-ao-yu.github.io/files/键盘锁定工具.exe)
+- [3.3、电脑键盘锁](http://hua-ao-yu.github.io/files/电脑键盘锁.zip)
+- [3.4、键盘屏蔽器](http://hua-ao-yu.github.io/files/键盘键位屏蔽器.exe)
+- [3.5、XWiNKEY](http://hua-ao-yu.github.io/files/XWiNKEY.exe)
 
 #### &emsp; 3.1、KeyFreeze <br> 
 
-&emsp; 该[软件](http://hua-ao-yu.github.io/files/KeyFreeze（键盘鼠标锁）.exe)可以个性化设置键盘锁。
+&emsp; [KeyFreeze](http://hua-ao-yu.github.io/files/KeyFreeze（键盘鼠标锁）.exe)可以个性化设置键盘锁。
 <img src='/images/skills/Useful Tools/3、键盘锁/3.1、KeyFreeze.jpg' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 3.2、键盘锁定工具 <br> 
-&emsp; 该[软件](http://hua-ao-yu.github.io/files/键盘锁定工具.exe)可以一键锁定键盘，非常方便。
+&emsp; [键盘锁定工具](http://hua-ao-yu.github.io/files/键盘锁定工具.exe)可以一键锁定键盘，非常方便。
 <img src='/images/skills/Useful Tools/3、键盘锁/3.2、键盘锁定工具.jpg' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 3.3、电脑键盘锁 <br> 
-&emsp; 该[软件](http://hua-ao-yu.github.io/files/电脑键盘锁.zip)可以锁定所有按键。
+&emsp; [电脑键盘锁](http://hua-ao-yu.github.io/files/电脑键盘锁.zip)可以锁定所有按键。
 <img src='/images/skills/Useful Tools/3、键盘锁/3.3、电脑键盘锁.jpg' width="800" style="display: block; margin: 0 auto;">
 
 #### &emsp; 3.4、键盘屏蔽器 <br> 
-&emsp; 该[软件](http://hua-ao-yu.github.io/files/键盘键位屏蔽器.exe)效果类似3.3。
+&emsp; [键盘屏蔽器](http://hua-ao-yu.github.io/files/键盘键位屏蔽器.exe)效果类似3.3。
 <img src='/images/skills/Useful Tools/3、键盘锁/3.4、键盘屏蔽器.jpg' width="800" style="display: block; margin: 0 auto;">
 
 #### &emsp; 3.5、XWiNKEY <br> 
-&emsp; 该[软件](http://hua-ao-yu.github.io/files/XWiNKEY.exe)通过勾选来选择禁用的键位。
+&emsp; [XWiNKEY](http://hua-ao-yu.github.io/files/XWiNKEY.exe)通过勾选来选择禁用的键位。
 <img src='/images/skills/Useful Tools/3、键盘锁/3.5、XWiNKEY.jpg' width="300" style="display: block; margin: 0 auto;">
