--- a/_posts/2024-10-30-2、图像处理.md
+++ b/_posts/2024-10-30-2、图像处理.md
@@ -6,6 +6,16 @@ tags: [tools]
 
 ## 2、在线处理图像的网站
 
+这部分提供了一些关于颜色、图片处理等相关方面的网站，挺实用的。
+
+## Quick Jump
+- [2.1、反转颜色](https://fontmeme.com/zh/invert-colors/)
+- [2.2、转换图片格式](https://products.aspose.app/imaging/zh-hans/conversion/)
+- [2.3、去除图像背景](https://www.remove.bg/zh)
+- [2.4、转换文件格式](https://www.aconvert.com/cn/Aconvert.com)
+- [2.5、调整图像阈值](https://threshold.imageonline.co/index-cn.php)
+- [2.6、生成渐变色](https://photokit.com/colors/color-gradient/?lang=zh)
+
 #### &emsp; 2.1、反转颜色 <br> 
 &emsp; 该[网站](https://fontmeme.com/zh/invert-colors/)可以反转图片中的颜色，使白色变为黑色，橙色变为蓝色，绿色变为品红色。此外，还包含旋转、模糊等图片操作（如右侧），还有字体识别、字体转换、下载各种字体。
 <br> <img src='/images/skills/Useful Tools/2、图像处理/2.1、反转颜色等.png' width="1500" style="display: block; margin: 0 auto;"> <br>
