--- a/_posts/2024-10-25-7、科研小妙招.md
+++ b/_posts/2024-10-25-7、科研小妙招.md
@@ -5,6 +5,17 @@ title: "7、科研小妙招"
 
 ## 7、科研小妙招
 
+这部分收集了一些在科研上可能会用到的一些网站和教程，包括参考文献下载、在线绘制流程图、GPT润色、科研绘图配色等。
+
+## Quick Jump
+- [7.1、文献下载-谷歌学术](https://scholar.google.com.hk/?hl=zh-CN)
+- [7.1、文献下载-SCI-Hub](https://sci-hub.se/)
+- [7.2、科研绘图](drwa.io)
+- [7.3、科研文献可视化-Citespace](https://citespace.podia.com/)
+- [7.4、GPT Academic](https://github.com/binary-husky/gpt_academic)
+- [7.5、知竹甘特图](https://zz-plan.com)
+- [7.6、科研绘图配色](https://zhuanlan.zhihu.com/p/670396774)
+
 #### &emsp; 7.1、文献下载 <br> 
 &emsp; [谷歌学术](https://scholar.google.com.hk/?hl=zh-CN)可以免费下载几乎所有外文文献。
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.1、文献下载-谷歌学术.png' width="800" style="display: block; margin: 0 auto;"> <br>
