--- a/_posts/2024-10-26-6、开发者狂喜.md
+++ b/_posts/2024-10-26-6、开发者狂喜.md
@@ -5,6 +5,15 @@ title: "6、开发者狂喜"
 
 ## 6、开发者狂喜
 
+这里包含了一些用于游戏开发、UI设计等可能会用到的字体、音乐素材等。
+
+## Quick Jump
+- [6.1、免费字体](https://www.100font.com/)
+- [6.2、免费游戏素材](https://github.com/Kavex/GameDev-Resources#multiple-graphic-collections)
+- [6.3、查看字体商用1](https://www.qiuziti.com/)
+- [6.3、查看字体商用2](https://fonts.safe.360.cn/)
+- [6.4、可商用字体](https://www.xiusheji.com/special/fonts-free.html)
+
 #### &emsp; 6.1、免费字体 <br> 
 &emsp; 该[网站](https://www.100font.com/)可以下载种类非常多的免费字体。
 <img src='/images/skills/Useful Tools/6、开发者狂喜/6.1、免费字体.jpg' width="800" style="display: block; margin: 0 auto;">
