--- a/_posts/2024-10-27-5、赛博图书馆.md
+++ b/_posts/2024-10-27-5、赛博图书馆.md
@@ -5,6 +5,18 @@ title: "5、赛博图书馆"
 
 ## 5、赛博图书馆
 
+这部分收集了一些机器学习方面的学习资料、中国古典名著等。
+
+## Quick Jump
+- [5.1、数据分析学习网站](https://zh-cn.statisticseasily.com/)
+- [5.2、机器学习实战](https://www.bookstack.cn/read/apachecn-MachineLearning/README.md)
+- [5.3、机器学习完整学习流程（强推）](https://github.com/Mikoto10032/DeepLearning)
+- [5.4、机器学习南瓜书](https://github.com/datawhalechina/pumpkin-book)
+- [5.5、机器学习笔记](https://github.com/imhuay/Algorithm_Interview_Notes-Chinese-backups)
+- [5.6、书栈网](https://www.bookstack.cn/cate)
+- [5.7、SCI-Hub](https://sci-hub.se/)
+- [5.8、中国古典名著](https://zhuanlan.zhihu.com/p/609049687)
+
 #### &emsp; 5.1、数据分析学习网站 <br> 
 &emsp; 该[网站](https://zh-cn.statisticseasily.com/)可以用来学习数据分析知识。
 <br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.1、数据分析网站.png' width="1500" style="display: block; margin: 0 auto;">
@@ -30,7 +42,7 @@ title: "5、赛博图书馆"
 &emsp; [书栈网](https://www.bookstack.cn/cate)一个各种电子书的网站版本，可以免费看很多工具书。
 <br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.6、书栈网.png' width="1500" style="display: block; margin: 0 auto;">
 
-#### &emsp; 5.7、SCI-HUB <br> 
+#### &emsp; 5.7、SCI-Hub <br> 
 &emsp; 这个[网站](https://sci-hub.se/)是SCI-HUB，可以免费下载文章。
 <br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.7、SCI-Hub.png' width="1500" style="display: block; margin: 0 auto;">
 
