--- a/_posts/2024-10-27-5、赛博图书馆.md
+++ b/_posts/2024-10-27-5、赛博图书馆.md
@@ -16,6 +16,7 @@ title: "5、赛博图书馆"
 - [5.6、书栈网](https://www.bookstack.cn/cate)
 - [5.7、SCI-Hub](https://sci-hub.se/)
 - [5.8、中国古典名著](https://zhuanlan.zhihu.com/p/609049687)
+- [5.9、大模型学习路线](#大模型学习路线)
 
 #### &emsp; 5.1、数据分析学习网站 <br> 
 &emsp; 该[网站](https://zh-cn.statisticseasily.com/)可以用来学习数据分析知识。
@@ -49,3 +50,13 @@ title: "5、赛博图书馆"
 #### &emsp; 5.8、中国古典名著 <br> 
 &emsp; 这个[网站](https://zhuanlan.zhihu.com/p/609049687)里可以下载不少中国古代名著。
 <br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.8、中国古典著作电子版.png' width="1500" style="display: block; margin: 0 auto;">
+
+#### &emsp; 5.9、[大模型学习路线](#大模型学习路线) <br> 
+&emsp; [这个知乎文章](https://zhuanlan.zhihu.com/p/676432440)里包含了很多LLM相关教材、资料和学习路线。
+<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.9、大模型学习路线.jpg' width="1500" style="display: block; margin: 0 auto;">
+
+&emsp; [这个github项目](https://github.com/datawhalechina/so-large-lm)里包含LLM相关的学习教程。
+<br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.9、大模型学习教程.png' width="1500" style="display: block; margin: 0 auto;">
+
+&emsp; [这个github项目](https://github.com/datawhalechina/llm-cookbook)里包含LLM相关的学习教程。
+&emsp; [这个知乎项目](https://zhuanlan.zhihu.com/p/682611867)也不错，也有pytorch代码。
