update unity 小技巧

--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -3,25 +3,15 @@ layout: post
 title: "Unity小技巧-菜单场景"
 ---
 
-这里记录一些可以免费看漫画、动漫、电视剧的网站集合。
+## 0、开发背景
 
-## Table of contents
-- [Table of contents](#table-of-contents)
-- [The start](#the-start)
-- [The middle](#the-middle)
-- [The end](#the-end)
+本人在使用Unity开发自己的小游戏时遇到了一个问题，即UI系统。最开始这个idea只是午睡时做的一个梦，希望可以开发一款**基于强化学习**中——**多臂老虎机算法**的一个小游戏，没希望开发成一个多大的游戏，因此采用的方法是一个关卡一个场景，为了方便就使用的每个场景一个UI。<br>
+这个方法当游戏体量或者说关卡数目较少时可以很方便，但是当关卡数达到两位数时，如果想要做一些UI上的优化就会非常麻烦，因为每个场景都要调整。所以本人想能不能**把UI系统单独建成一个场景**，在每个游戏场景中就不需要UI了，会节省一大部分后续优化的精力。这篇文章就是记录的这种方法。
 
-Mauris viverra dictum ultricies. Vestibulum quis ipsum euismod, facilisis metus sed, varius ipsum. Donec scelerisque lacus libero, eu dignissim sem venenatis at. Nunc a egestas tortor, sed feugiat leo. Vestibulum porta tincidunt tellus, vitae ornare tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed nunc neque, tempor in iaculis non, faucibus et metus. Etiam id nisl ut lorem gravida euismod.
+## 1、游戏构成
 
-## [The start](#the-start)
-
-Fusce non velit cursus ligula mattis convallis vel at metus. Sed pharetra tellus massa, non elementum eros vulputate non. Suspendisse potenti. Quisque arcu felis, laoreet vel accumsan sit amet, fermentum at nunc. Sed massa quam, auctor in eros quis, porttitor tincidunt orci. Nulla convallis id sapien ornare viverra. Cras nec est lacinia ligula porta tincidunt. Nam a est eget ligula pellentesque posuere. Maecenas quis enim ac risus accumsan scelerisque. Aliquam vitae libero sapien. Etiam convallis, metus nec suscipit condimentum, quam massa congue velit, sit amet sollicitudin nisi tortor a lectus. Cras a arcu enim. Suspendisse hendrerit euismod est ac gravida. Donec vitae elit tristique, suscipit eros at, aliquam augue. In ac faucibus dui. Sed tempor lacus tristique elit sagittis, vitae tempor massa convallis.
-
-## [The middle](#the-middle)
-
-Proin quis velit et eros auctor laoreet. Aenean eget nibh odio. Suspendisse mollis enim pretium, fermentum urna vitae, egestas purus. Donec convallis tincidunt purus, scelerisque fermentum eros sagittis vel. Aliquam ac aliquet risus, tempus iaculis est. Fusce molestie mauris non interdum hendrerit. Curabitur ullamcorper, eros vitae interdum volutpat, lacus magna lacinia turpis, at accumsan dui tortor vel lectus. Aenean risus massa, semper non lectus rutrum, facilisis imperdiet mi. Praesent sed quam quis purus auctor ornare et sed augue. Vestibulum non quam quis ligula luctus placerat sed sit amet erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce auctor, sem eu volutpat dignissim, turpis nibh malesuada arcu, in consequat elit mauris quis sem. Nam tristique sit amet enim vel accumsan. Sed id nibh commodo, dictum sem id, semper quam.
-
-## The end
-
-Donec ex lectus, tempus non lacinia quis, pretium non ipsum. Praesent est nunc, rutrum vel tellus eu, tristique laoreet purus. In rutrum orci sit amet ex ornare, sit amet finibus lacus laoreet. Etiam ac facilisis purus, eget porttitor odio. Suspendisse tempus dolor nec risus sodales posuere. Proin dui dui, mollis a consectetur molestie, lobortis vitae tellus. Vivamus at purus sed urna sollicitudin mattis. Mauris lacinia libero in lobortis pulvinar. Nullam sit amet condimentum justo. Donec orci justo, pharetra ut dolor non, interdum finibus orci. Proin vitae ante a dui sodales commodo ac id elit. Nunc vel accumsan nunc, sit amet congue nunc. Aliquam in lacinia velit. Integer lobortis luctus eros, in fermentum metus aliquet a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+为了模拟多场景游戏，一共三个场景：game cube、game sphere、Menu。<br>
+其中Menu是纯纯的UI场景，game cube和game sphere中均有一个滑块在左右反复滑动，前者滑块为cube，后者滑块为sphere。<br>
+以game Cube为初始场景，以附加的加载方式加载Menu。当点击Menu中的按钮时可以改变滑动物体的颜色和切换场景。当点击button后游戏场景称暂停，并弹出界面，只有将弹出的关掉才会继续运行，如下图。
+<img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1、游戏构成.png' width="1500" style="display: block; margin: 0 auto;">
 
