--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -5,7 +5,7 @@ title: "Unity小技巧-菜单场景"
 
 ## 0、开发背景
 
-本人在使用Unity开发自己的小游戏时遇到了一个问题，即UI系统。最开始这个idea只是午睡时做的一个梦，希望可以开发一款**基于强化学习**中——**多臂老虎机算法**的一个小游戏，没希望开发成一个多大的游戏，因此采用的方法是一个关卡一个场景，为了方便就使用的每个场景一个UI。<br>
+本人在使用Unity开发自己的小游戏时遇到了一个问题，即UI系统。最开始这个idea只是午睡时做的一个梦，希望可以开发一款<strong style="color: red;">基于强化学习</strong>中——**多臂老虎机算法**的一个小游戏，没希望开发成一个多大的游戏，因此采用的方法是一个关卡一个场景，为了方便就使用的每个场景一个UI。<br>
 这个方法当游戏体量或者说关卡数目较少时可以很方便，但是当关卡数达到两位数时，如果想要做一些UI上的优化就会非常麻烦，因为每个场景都要调整。所以本人想能不能**把UI系统单独建成一个场景**，在每个游戏场景中就不需要UI了，会节省一大部分后续优化的精力。这篇文章就是记录的这种方法。
 
 ## 1、游戏构成
