--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -5,13 +5,17 @@ title: "Unity小技巧-菜单场景"
 
 ## 0、开发背景
 
-本人在使用Unity开发自己的小游戏时遇到了一个问题，即UI系统。最开始这个idea只是午睡时做的一个梦，希望可以开发一款<strong style="color: red;">基于强化学习</strong>中——**多臂老虎机算法**的一个小游戏，没希望开发成一个多大的游戏，因此采用的方法是一个关卡一个场景，为了方便就使用的每个场景一个UI。<br>
-这个方法当游戏体量或者说关卡数目较少时可以很方便，但是当关卡数达到两位数时，如果想要做一些UI上的优化就会非常麻烦，因为每个场景都要调整。所以本人想能不能**把UI系统单独建成一个场景**，在每个游戏场景中就不需要UI了，会节省一大部分后续优化的精力。这篇文章就是记录的这种方法。
+&emsp; 本人在使用Unity开发自己的小游戏时遇到了一个问题，即UI系统。最开始这个idea只是午睡时做的一个梦，希望可以开发一款<strong style="color: red;">基于强化学习</strong>中——<strong style="color: red;">多臂老虎机算法</strong>的一个小游戏，没希望开发成一个多大的游戏，因此采用的方法是一个关卡一个场景，为了方便就使用的每个场景一个UI。<br>
+&emsp; 这个方法当游戏体量或者说关卡数目较少时可以很方便，但是当关卡数达到两位数时，如果想要做一些UI上的优化就会非常麻烦，因为每个场景都要调整。所以本人想能不能<strong style="color: red;">把UI系统单独建成一个场景</strong>，在每个游戏场景中就不需要UI了，会节省一大部分后续优化的精力。这篇文章就是记录的这种方法。
 
 ## 1、游戏构成
 
-为了模拟多场景游戏，一共三个场景：game cube、game sphere、Menu。<br>
-其中Menu是纯纯的UI场景，game cube和game sphere中均有一个滑块在左右反复滑动，前者滑块为cube，后者滑块为sphere。<br>
-以game Cube为初始场景，以附加的加载方式加载Menu。当点击Menu中的按钮时可以改变滑动物体的颜色和切换场景。当点击button后游戏场景称暂停，并弹出界面，只有将弹出的关掉才会继续运行，如下图。
+&emsp; 为了模拟多场景游戏，一共三个场景：game cube、game sphere、Menu。<br>
+&emsp; 其中Menu是纯纯的UI场景，game cube和game sphere中均有一个滑块在左右反复滑动，前者滑块为cube，后者滑块为sphere。<br>
+&emsp; 以game Cube为初始场景，以附加的加载方式加载Menu。当点击Menu中的按钮时可以改变滑动物体的颜色和切换场景。当点击button后游戏场景称暂停，并弹出界面，只有将弹出的关掉才会继续运行，如下图。
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1、游戏构成.png' width="1500" style="display: block; margin: 0 auto;">
 
+#### 1.1、game cube/sphere
+
+&emsp; 两个游戏场景内容上是已一致的，如下图：
+<img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1.1、游戏场景1.png' width="800" style="display: block; margin: 0 auto;">
