--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -19,10 +19,10 @@ title: "Unity小技巧-菜单场景"
 
 &emsp; 两个游戏场景内容上是已一致的，如下图：
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1.1、游戏场景1.png' width="800" style="display: block; margin: 0 auto;">
-&emsp; 其中Cube/Sphere为屏幕中间左右重复移动的滑块，是个简单的三维物体，点击右键->3D Object->Cube/Sphere创建而成，上面只挂载了一个脚本：playerMove.cs：
+&emsp; 其中Cube/Sphere为屏幕中间左右重复移动的滑块，是个简单的三维物体，点击右键->3D Object->Cube/Sphere创建而成，上面只挂载了一个脚本playerMove.cs：
 
-## Csharp
-```Csharp
+## C#
+```csharp
 using System.Collections;
 using System.Collections.Generic;
 using UnityEngine;
