--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -12,30 +12,24 @@ title: "Unity小技巧-菜单场景"
 
 &emsp; 为了模拟多场景游戏，一共三个场景：game cube、game sphere、Menu。<br>
 &emsp; 其中Menu是纯纯的UI场景，game cube和game sphere中均有一个滑块在左右反复滑动，前者滑块为cube，后者滑块为sphere。<br>
-&emsp; 以game Cube为初始场景，以附加的加载方式加载Menu。当点击Menu中的按钮时可以改变滑动物体的颜色和切换场景。当点击button后游戏场景称暂停，并弹出界面，只有将弹出的关掉才会继续运行，如下图。
+&emsp; 以game Cube为初始场景，以附加的加载方式加载Menu。当点击Menu中的按钮时可以改变滑动物体的<strong style="color: red;">颜色</strong>和<strong style="color: red;">切换场景</strong>。当点击button后游戏场景称<strong style="color: red;">暂停</strong>，并弹出界面，只有将弹出的关掉才会继续运行，如下图。
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1、游戏构成.png' width="1500" style="display: block; margin: 0 auto;">
 
 #### 1.1、game cube/sphere场景
 
 &emsp; 两个游戏场景内容上是已一致的，如下图：
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1.1、游戏场景1.png' width="800" style="display: block; margin: 0 auto;">
-&emsp; 其中Cube/Sphere为屏幕中间左右重复移动的滑块，是个简单的三维物体，点击右键->3D Object->Cube/Sphere创建而成，上面只挂载了一个脚本playerMove.cs：
+&emsp; 其中Cube/Sphere为屏幕中间左右重复移动的滑块，是个简单的三维物体，点击右键->3D Object->Cube/Sphere创建而成，上面只挂载了一个脚本playerMove.cs，这个脚本的作用是一直让滑块左右移动：
 
 ## C#
 ```csharp
-using System.Collections;
-using System.Collections.Generic;
-using UnityEngine;
 public class playerMove : MonoBehaviour
 {
     public GameObject cube;
     public Vector3 curPosition; // 滑块当前的三维坐标
     public int directFlag = 0; // 定义滑块初始移动的方向
-    public float speed = 2.0f; // 定义滑块的速度
-    void Start()
-    {
-        speed = 5.0f;
-    }
+    public float speed = 5.0f; // 定义滑块的速度
+
     void Update()
     {
         curPosition = cube.transform.localPosition;
@@ -56,5 +50,80 @@ public class playerMove : MonoBehaviour
         cube.transform.localPosition = curPosition; // 更改滑块的坐标
     }
 }
+```
+&emsp; 重要的是<strong style="color: red;">EventSender</strong>和<strong style="color: red;">EventListener</strong>。其中<strong style="color: red;">EventSender</strong>负责加载菜单场景：
 
+## C#
+```csharp
+using UnityEngine;
+using UnityEngine.SceneManagement; // 这个是新建cs文件不自带的，需要自己添加
+public class EventSender : MonoBehaviour
+{
+    void Start()
+    {
+        // 加载Menu场景（这里假设MenuSceneName是Menu场景的名称）
+        string MenuSceneName = "Menu";
+        SceneManager.LoadScene(MenuSceneName, LoadSceneMode.Additive);
+    }
+}
+```
+&emsp;  <strong style="color: red;">EventListener</strong>需要挂载多个监听脚本：
+## C#
+```csharp
+// 改变物体颜色的监听脚本
+using UnityEngine;
+public class CubeColorListener : MonoBehaviour
+{
+    // 假设这是game场景中的一个cube的引用（在实际应用中，您可能需要确保这个引用在场景加载后仍然有效）
+    public GameObject cube;
+
+    void OnEnable()
+    {
+        // 订阅颜色改变事件
+        GlobalEventManager.Instance.OnColorChangeRequested.AddListener(ChangeCubeColor);
+    }
+
+    void OnDisable()
+    {
+        // 取消订阅颜色改变事件（避免内存泄漏）
+        GlobalEventManager.Instance.OnColorChangeRequested.RemoveListener(ChangeCubeColor);
+    }
+
+    void ChangeCubeColor(Color newColor)
+    {
+        // 改变cube的颜色
+        if (cube != null && cube.activeInHierarchy && cube.GetComponent<Renderer>() != null)
+            cube.GetComponent<Renderer>().material.color = newColor;
+        else
+            Debug.LogError("Cube not found or not active in hierarchy.");
+    }
+}
+
+// 切换场景的监听脚本
+using UnityEngine;
+using UnityEngine.SceneManagement;
+public class GamePauseListener : MonoBehaviour
+{
+    void OnEnable()
+    {
+        // 订阅暂停/恢复游戏事件
+        GlobalEventManager.Instance.OnPauseGameRequested.AddListener(ChangeGameStatus);
+    }
+
+    void OnDisable()
+    {
+        // 取消订阅暂停/恢复游戏事件
+        GlobalEventManager.Instance.OnPauseGameRequested.RemoveListener(ChangeGameStatus);
+    }
+
+    void ChangeGameStatus(bool isPaused)
+    {
+        Scene scene = SceneManager.GetActiveScene();
+        if (isPaused)
+            Time.timeScale = 0; // 游戏暂停
+        else
+            Debug.Log(scene.name + "  Resume");
+            Time.timeScale = 1; // 游戏暂停
+    }
+}
 ```
