--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -21,7 +21,6 @@ title: "Unity小技巧-菜单场景"
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1.1、游戏场景1.png' width="800" style="display: block; margin: 0 auto;">
 &emsp; 其中Cube/Sphere为屏幕中间左右重复移动的滑块，是个简单的三维物体，点击右键->3D Object->Cube/Sphere创建而成，上面只挂载了一个脚本playerMove.cs，这个脚本的作用是一直让滑块左右移动：
 
-## C#
 ```csharp
 public class playerMove : MonoBehaviour
 {
@@ -53,8 +52,8 @@ public class playerMove : MonoBehaviour
 ```
 &emsp; 重要的是<strong style="color: red;">EventSender</strong>和<strong style="color: red;">EventListener</strong>。其中<strong style="color: red;">EventSender</strong>负责加载菜单场景：
 
-## C#
 ```csharp
+<pre style="line-height: 1.0;"><code>
 using UnityEngine;
 using UnityEngine.SceneManagement; // 这个是新建cs文件不自带的，需要自己添加
 public class EventSender : MonoBehaviour
@@ -66,9 +65,10 @@ public class EventSender : MonoBehaviour
         SceneManager.LoadScene(MenuSceneName, LoadSceneMode.Additive);
     }
 }
+</code></pre>
 ```
 &emsp;  <strong style="color: red;">EventListener</strong>需要挂载多个监听脚本：
-## C#
+
 ```csharp
 // 改变物体颜色的监听脚本
 using UnityEngine;
