--- a/_posts/网站调试小技巧（moonwalk）/2000-01-01-网站调试-目录.md
+++ b/_posts/网站调试小技巧（moonwalk）/2000-01-01-网站调试-目录.md
@@ -15,4 +15,4 @@ title: "网站调试-目录"
 &emsp; 虽说是面向新手的教程，但是最好是具有一定编程功底，或者可以大致理解代码的内容：
 
 ## 目录
-- [网站调试](网站调试-代码行间距调整)
+- [网站调试](huaaorain.github.io/网站调试-代码行间距调试)
