--- a/_posts/网站调试小技巧（moonwalk）/2024-11-26-网站调试-代码行间距调试.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-26-网站调试-代码行间距调试.md
@@ -5,7 +5,7 @@ title: "网站调试-代码行间距调整"
 
 ## 0、需求及目标介绍
 
-&emsp; 在记录Unity的一些调试小技巧时觉得如果将C#代码直接放在网站里纵向占用面积太大，而不放的话讲解起来效果可能不太好，因此希望可以调整网站模板里的代码行间距。
+&emsp; 在记录Unity的一些调试小技巧时觉得如果将C#代码直接放在网站里纵向占用面积太大，而不放的话讲解起来效果可能不太好，因此希望可以<strong style="color: red;">调整网站模板里的代码行间距</strong>。
 
 ## 1、调整方式
 
