--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -65,7 +65,7 @@ public class EventSender : MonoBehaviour
     }
 }
 ```
-&emsp;  <strong style="color: red;">EventListener</strong>需要挂载多个监听脚本：
+&emsp;  <strong style="color: red;">EventListener</strong>需要挂载多个监听脚本，其中的GameObject cube在这两个场景下分别为Cube和Sphere：
 
 ```csharp
 // 改变物体颜色的监听脚本
@@ -125,3 +125,10 @@ public class GamePauseListener : MonoBehaviour
     }
 }
 ```
+#### 1.2、Menu场景
+
+&emsp;  然后是最重要的Menu场景，场景中后添加的只有一个Canvas，它包含了以下UI模块：
+
+> 1、Listener：这个其实没有实际作用，但是改变颜色的监听脚本需要有一个button；
+> 2、SelectColor：
+
