--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -53,6 +53,7 @@ public class playerMove : MonoBehaviour
 &emsp; 重要的是<strong style="color: red;">EventSender</strong>和<strong style="color: red;">EventListener</strong>。其中<strong style="color: red;">EventSender</strong>负责加载菜单场景：
 
 ```csharp
+// 预加载Menu场景的脚本，挂载在EventSender上面
 using UnityEngine;
 using UnityEngine.SceneManagement; // 这个是新建cs文件不自带的，需要自己添加
 public class EventSender : MonoBehaviour
@@ -68,7 +69,7 @@ public class EventSender : MonoBehaviour
 &emsp;  <strong style="color: red;">EventListener</strong>需要挂载多个监听脚本，其中的GameObject cube在这两个场景下分别为Cube和Sphere：
 
 ```csharp
-// 改变物体颜色的监听脚本
+// 改变物体颜色的监听脚本，挂载到EventListener上
 using UnityEngine;
 public class CubeColorListener : MonoBehaviour
 {
@@ -97,7 +98,7 @@ public class CubeColorListener : MonoBehaviour
     }
 }
 
-// 切换场景的监听脚本
+// 切换场景的监听脚本，挂载到EventListener上
 using UnityEngine;
 using UnityEngine.SceneManagement;
 public class GamePauseListener : MonoBehaviour
@@ -127,8 +128,137 @@ public class GamePauseListener : MonoBehaviour
 ```
 #### 1.2、Menu场景
 
-&emsp;  然后是最重要的Menu场景，场景中后添加的只有一个Canvas，它包含了以下UI模块：
+&emsp; 然后是最重要的Menu场景，场景中后添加的只有一个Canvas，它包含了以下UI模块：
 
-> 1、Listener：这个其实没有实际作用，但是改变颜色的监听脚本需要有一个button；
-> 2、SelectColor：
+> 1、Listener：这个其实没有实际作用，但是改变颜色的监听脚本需要有一个button；<br>
+> 2、SelectColor：按下这个按键游戏暂停，同时弹出ColorPanel；<br>
+> 3、ColorPanel：弹窗，上面有R、G、B三种颜色可供选择，关掉后游戏继续运行；<br>
+> 4、SelectScene：按下这个按键游戏暂停，同时弹出ScenePanel；<br>
+> 5、ScenePanel：弹窗，上面有两个游戏场景可以选择，关掉后游戏继续运行。<br>
 
+ColorPanel和ScenePanel两个弹窗如下图：
+<img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1.2、游戏运行界面.png' width="1500" style="display: block; margin: 0 auto;">
+
+## 2、脚本挂载及讲解
+
+&emsp; 两个游戏场景只在滑块上挂在了运动脚本，上面已经讲过，无需多言。下面详细讲解Menu场景中的内容。
+&emsp; 本人习惯将所有UI的脚本都挂载在Canvas上，这上面挂载了两个脚本MenuButton.cs和changedScene.cs，其中MenuButton脚本需要拖拽的部分在下图中已标出：
+<img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-2、脚本挂载及讲解-Canvas挂载.png' width="1500" style="display: block; margin: 0 auto;">
+&emsp; 下面是Menu中用到的三个脚本：
+
+```csharp
+// 单例模式全局管理器（注意，这个脚本无需挂载到任何物体上）
+using UnityEngine;
+using UnityEngine.Events;
+
+public class GlobalEventManager : MonoBehaviour
+{
+    private static GlobalEventManager _instance;
+
+    public static GlobalEventManager Instance
+    {
+        get
+        {
+            if (_instance == null)
+            {
+                GameObject obj = new GameObject("GlobalEventManager");
+                DontDestroyOnLoad(obj);
+                _instance = obj.AddComponent<GlobalEventManager>();
+            }
+            return _instance;
+        }
+    }
+    // 声明一个UnityEvent来传递颜色改变的消息
+    public UnityEvent<Color> OnColorChangeRequested = new UnityEvent<Color>();
+    // 声明一个UnityEvent来传递游戏暂停/恢复的消息
+    public UnityEvent<bool> OnPauseGameRequested = new UnityEvent<bool>();
+    // 私有构造函数防止外部实例化
+    private GlobalEventManager() { }
+    // 新增的方法，用于触发OnPauseGameRequested事件
+    public void TriggerPauseGameRequested(bool isPaused)
+    {
+        Debug.Log("TriggerPauseGameRequested was called with isPaused: " + isPaused);
+        OnPauseGameRequested.Invoke(isPaused);
+    }
+
+}
+
+// 给Button添加监听器，挂载到Canvas上
+using UnityEngine;
+using UnityEngine.UI;
+public class MenuButton : MonoBehaviour
+{
+    public Button changeColorButton; // 绑定到UI按钮
+    public Button changeGamePauseButton; // 绑定到UI按钮
+    public Button changeGameResumeButton; // 绑定到UI按钮
+
+    void Start()
+    {
+        // 为按钮添加点击事件监听器
+        changeColorButton.onClick.AddListener(ChangeCubeRed);
+        changeColorButton.onClick.AddListener(ChangeCubeGreen);
+        changeColorButton.onClick.AddListener(ChangeCubeBlue);
+
+        changeGamePauseButton.onClick.AddListener(PauseGame);
+        changeGameResumeButton.onClick.AddListener(ResumeGame);
+    }
+
+    public void PauseGame()
+    {
+        Debug.Log("Pause");
+        GlobalEventManager.Instance.OnPauseGameRequested.Invoke(true);
+    }
+
+    public void ResumeGame()
+    {
+        Debug.Log("Resume");
+        GlobalEventManager.Instance.OnPauseGameRequested.Invoke(false);
+    }
+
+    public void ChangeCubeRed()
+    {
+        // 设置新的颜色（这里以红色为例）
+        Color newColor = Color.red;
+        GlobalEventManager.Instance.OnColorChangeRequested.Invoke(newColor);
+        // 如果你想要卸载Menu场景，可以在这里做
+        // SceneManager.UnloadSceneAsync(SceneManager.GetActiveScene().name);
+        // 但注意，这可能会导致一些问题，特别是如果Menu场景中有活动的脚本或对象。
+        // 更常见的做法是使用SceneManager.LoadScene来替换当前场景，或者保持Menu场景加载并隐藏它。
+    }
+
+    public void ChangeCubeGreen()
+    {
+        Color newColor = Color.green;
+        GlobalEventManager.Instance.OnColorChangeRequested.Invoke(newColor);
+    }
+
+    public void ChangeCubeBlue()
+    {
+        Color newColor = Color.blue;
+        GlobalEventManager.Instance.OnColorChangeRequested.Invoke(newColor);
+    }
+}
+
+// 全换场景脚本，挂载到Canvas上
+using System.Collections;
+using System.Collections.Generic;
+using UnityEngine;
+using UnityEngine.SceneManagement;
+public class changeScene : MonoBehaviour
+{
+    public void LoadSceneCube()
+    {
+        SceneManager.LoadScene("game cube");
+    }
+
+    public void LoadSceneSphere()
+    {
+        SceneManager.LoadScene("game sphere");
+    }
+}
+```
+
+先说左侧改变颜色的部分，程序开始运行时ColorPanel是看不见的，因此需要用户点击SelectColor来使它出现，而当弹出窗口时我们又希望游戏是暂停状态，所以SelectColor这个Button上在点击时需要绑定两个函数，SelectScene同理，绑定的是暂停游戏的函数和激活ScenePanel函数：
+<img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-2、脚本挂载及讲解-Canvas挂载.png' width="600" style="display: block; margin: 0 auto;">
+
+而ColorPanel，即修改颜色的弹框则简单一些，它的
