--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -130,11 +130,11 @@ public class GamePauseListener : MonoBehaviour
 
 &emsp; 然后是最重要的Menu场景，场景中后添加的只有一个Canvas，它包含了以下UI模块：
 
-> 1、Listener：这个其实没有实际作用，但是改变颜色的监听脚本需要有一个button；<br>
-> 2、SelectColor：按下这个按键游戏暂停，同时弹出ColorPanel；<br>
-> 3、ColorPanel：弹窗，上面有R、G、B三种颜色可供选择，关掉后游戏继续运行；<br>
-> 4、SelectScene：按下这个按键游戏暂停，同时弹出ScenePanel；<br>
-> 5、ScenePanel：弹窗，上面有两个游戏场景可以选择，关掉后游戏继续运行。<br>
+> 1、**Listener**：这个其实没有实际作用，但是改变颜色的监听脚本需要有一个button；<br>
+> 2、**SelectColor**：按下这个按键游戏暂停，同时弹出ColorPanel；<br>
+> 3、**ColorPanel**：弹窗，上面有R、G、B三种颜色可供选择，关掉后游戏继续运行；<br>
+> 4、**SelectScene**：按下这个按键游戏暂停，同时弹出ScenePanel；<br>
+> 5、**ScenePanel**：弹窗，上面有两个游戏场景可以选择，关掉后游戏继续运行。<br>
 
 ColorPanel和ScenePanel两个弹窗如下图：
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-1.2、游戏运行界面.png' width="1500" style="display: block; margin: 0 auto;">
@@ -259,6 +259,6 @@ public class changeScene : MonoBehaviour
 ```
 
 先说左侧改变颜色的部分，程序开始运行时ColorPanel是看不见的，因此需要用户点击SelectColor来使它出现，而当弹出窗口时我们又希望游戏是暂停状态，所以SelectColor这个Button上在点击时需要绑定两个函数，SelectScene同理，绑定的是暂停游戏的函数和激活ScenePanel函数：
-<img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-2、脚本挂载及讲解-Canvas挂载.png' width="600" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-2、脚本挂载及讲解-颜色弹窗.png' width="1500" style="display: block; margin: 0 auto;">
 
 而ColorPanel，即修改颜色的弹框则简单一些，它的
