--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -261,4 +261,7 @@ public class changeScene : MonoBehaviour
 先说左侧改变颜色的部分，程序开始运行时ColorPanel是看不见的，因此需要用户点击SelectColor来使它出现，而当弹出窗口时我们又希望游戏是暂停状态，所以SelectColor这个Button上在点击时需要绑定两个函数，SelectScene同理，绑定的是暂停游戏的函数和激活ScenePanel函数：
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-2、脚本挂载及讲解-颜色弹窗.png' width="1500" style="display: block; margin: 0 auto;">
 
-而ColorPanel，即修改颜色的弹框则简单一些，它的
+而ColorPanel，即修改颜色的弹框则简单一些，它的下方包含了四个Button，Red、Green、Blue、Close，前三个Button分别绑定的代码是MenuButton.cs脚本中的changeCubeRed、changeCubeGreen、changeCubeBlue，用来修改滑块的颜色。而Close（右上角的红色块）绑定了两个函数，即让ColorPanel消失以及游戏继续：
+<img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-2、脚本挂载及讲解-Close.png' width="1500" style="display: block; margin: 0 auto;">
+
+
